--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="btn" href="#liste">Ders 2</a>
                 <a class="btn" href="#tablo">Ders 3</a>
                 <a class="btn" href="#form">Ders 4</a>
-                <a class="btn" href="#html5">Ders 5</a>
+                <a class="btn" href="#yenilik">Ders 5</a>
             </div>
         </center>
         
@@ -46,7 +46,7 @@
                 $('#dynamicdiv').load("form.html");
     });
     buton[4].addEventListener("click", function() {
-                $('#dynamicdiv').load("html5.html");
+                $('#dynamicdiv').load("yenilik.html");
     });
 
 
