--- a/index.html
+++ b/index.html
@@ -4,52 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>HTML Dersleri</title>
+    <title>Enes Yildirim</title>
+    <style>
+    .myButton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #a4e271;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #a4e271;
+	box-shadow:inset 0px 1px 0px 0px #a4e271;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89c403), color-stop(1, #77a809));
+	background:-moz-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-webkit-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-o-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-ms-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89c403', endColorstr='#77a809',GradientType=0);
+	background-color:#89c403;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #74b807;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:24px;
+	font-weight:bold;
+	padding:20px 70px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #528009;
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
+	background:-moz-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-webkit-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-o-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-ms-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77a809', endColorstr='#89c403',GradientType=0);
+	background-color:#77a809;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+    </style>
 </head>
 <body>
-    <a id="geribtn" class="geribtn"  href="">Geri</a>
-    <div id="dynamicdiv" class="main">
-        <img src="logo.png" style="" alt="" srcset="">
-        <center><h1>HTML Dersleri</h1>
-            <div class="btncontent">
-                <a class="btn" href="#giris">Ders 1</a>
-                <a class="btn" href="#liste">Ders 2</a>
-                <a class="btn" href="#tablo">Ders 3</a>
-                <a class="btn" href="#form">Ders 4</a>
-                <a class="btn" href="#yenilik">Ders 5</a>
-            </div>
-        </center>
-        
-    </div>
+    <h1>Enes Yıldırım</h1><br/>
+    <a class="myButton" href="/vize/index.html">Vize</a><br/>
+    <a class="myButton" href="/final/index.html">Final</a>
 </body>
-<script>
-    var buton = document.getElementsByClassName("btn");
-    for (var i = 0; i < buton.length; i++) {
-        buton[i].addEventListener("click", function() {
-            var geri_btn = document.getElementById("geribtn");
-            geri_btn.style.display = "inline-block";
-        });
-    }
-
-    buton[0].addEventListener("click", function() {
-                $('#dynamicdiv').load("giris.html");
-    });
-    buton[1].addEventListener("click", function() {
-                $('#dynamicdiv').load("liste.html");
-    });
-    buton[2].addEventListener("click", function() {
-                $('#dynamicdiv').load("tablo.html");
-    });
-    buton[3].addEventListener("click", function() {
-                $('#dynamicdiv').load("form.html");
-    });
-    buton[4].addEventListener("click", function() {
-                $('#dynamicdiv').load("yenilik.html");
-    });
-
-
-    
-</script>
 </html>
