--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 <body>
     <h1>Enes Yıldırım</h1><br/>
     <a class="myButton" href="/vize/index.html">Vize</a><br/>
-    <a class="myButton" href="/final/index.html">Final</a>
+	<a class="myButton" href="/final/index.html">Final</a>
+	<br/>
+    <a class="myButton" href="https://drive.google.com/file/d/1HQiSARhsbgPvkCQn75xm7U1VOtLxuQ5c/view?usp=sharing">Ödevler & Proje</a>
 </body>
 </html>
